Use Spring Boot JPA to connect with Postgres DB